updated link to our papers

--- a/config.toml
+++ b/config.toml
@@ -56,7 +56,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
   [[params.intro.item]]
     title = "Papers"
     description = "Check out publications and/or preprints from the lab. We ensure all our work is available to the public, so if you can't find a paper let us know!"
-    url = "https://osf.io/preprints/discover?provider=OSFORPsyArXiv&q=tags%3A(%22corelab%22)&sort=-date_updated" #Searches for OSF Preprints and PsyArXiv preprints, with the tag "corelab", sorted from most recent -> oldest.
+    url = "https://osf.io/preprints/discover?provider=OSFORPsyArXivORAfricArXiv&q=tags%3A(%22corelab%22)&sort=-date_updated" #Searches for OSF Preprints and PsyArXiv preprints, with the tag "corelab", sorted from most recent -> oldest.
     button = "Access Papers"
     icon = "icon-docs"
     img = "papers.png"
