--- a/config.toml
+++ b/config.toml
@@ -107,6 +107,14 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
     [[params.work.row]]
     category = "announcements.png"
+    img = "georgiou.png"
+    alt = "georgiou"
+    title = "Replication and extension of Georgiou et al. (2020)"
+    subtitle = "05/2021 - Students of our university replicated and extended the work of Georgiou et al. (2020)"
+    url = "https://psyarxiv.com/t62s7/"
+
+    [[params.work.row]]
+    category = "announcements.png"
     img = "nrcnl.png"
     alt = "nrcnl"
     title = "Heartwarming featured in NRC"
