--- a/config.toml
+++ b/config.toml
@@ -667,6 +667,11 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       person = '<a href="http://emotionregulationlab.com/?page_id=41">Mattie Tops</a><br>Vrije Universiteit Amsterdam'
       img = "tops.jpeg"
       alt = "tops"
+      
+      [[params.testimonials.item]] 
+      person = '<a href="https://www.projectimplicit.net/nosek/">Brian Nosek</a><br>Center for Open Science'
+      img = "nosek.jpeg"
+      alt = "nosek"
   
   # Services section
   # Note: The description lengths below need to be roughly equal or the formatting will get messed up.
