--- a/config.toml
+++ b/config.toml
@@ -105,6 +105,14 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     description = "Here are some recent announcements."
     footertext = "Here our older announcements: https://corelab.blog/older-announcement/."
 
+   [[params.work.row]]
+    category = "announcements.png"
+    img = "early_career_award.png"
+    alt = "Forscher"
+    title = "Patrick nominated for the Early Career Award 2021!"
+    subtitle = "11/2021 - Patrick was nominated for the Early Career Award 2021."
+    url = "https://twitter.com/einstein_berlin/status/1462801738419916800?s=21"
+
     [[params.work.row]]
     category = "announcements.png"
     img = "Alessandro_meta_analysis.png"
@@ -193,13 +201,13 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     subtitle = "02/2021 - Hans & Patrick published an article on the difficulty experienced by Science to provide practical advice, in 'The Inquisitive Mind'."
     url = "https://in-mind.org/blog/post/why-a-new-popular-press-psychology-book-refrains-from-giving-advice"
 
-    [[params.work.row]]
-    category = "announcements.png"
-    img = "embrlabs.png"
-    alt = "embrlabs"
-    title = "Hans' work featured in embrlabs"
-    subtitle = "02/2021 - Hans has been interviewed by embrlabs to talk about him, his work, and embrlabs."
-    url = "https://embrlabs.com/blogs/news/a-thermal-connection-a-conversation-with-dr-hans-rocha-ijzerman"
+#    [[params.work.row]]
+#    category = "announcements.png"
+#    img = "embrlabs.png"
+#    alt = "embrlabs"
+#    title = "Hans' work featured in embrlabs"
+#    subtitle = "02/2021 - Hans has been interviewed by embrlabs to talk about him, his work, and embrlabs."
+#    url = "https://embrlabs.com/blogs/news/a-thermal-connection-a-conversation-with-dr-hans-rocha-ijzerman"
 
 #    [[params.work.row]]
 #      category = "publication.png"
