--- a/config.toml
+++ b/config.toml
@@ -107,6 +107,14 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
    [[params.work.row]]
     category = "announcements.png"
+    img = "warm.png"
+    alt = "IJzerman"
+    title = "Heartwarming covered in a magazine"
+    subtitle = "11/2021 - Heartwarming was covered in Dutch science magazine Quest."
+    url = "https://www.quest.nl/"
+
+   [[params.work.row]]
+    category = "announcements.png"
     img = "early_career_award.png"
     alt = "Forscher"
     title = "Patrick nominated for his work!"
@@ -193,13 +201,13 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       subtitle = "03/2021 - Hans published a popular science article on social thermoregulation, in 'Psychology Today'."
       url = "https://www.psychologytoday.com/us/articles/202103/warming-each-other"
 
-    [[params.work.row]]
-    category = "publication.png"
-    img = "practical.png"
-    alt = "practical"
-    title = "Translation of science to practical advice"
-    subtitle = "02/2021 - Hans & Patrick published an article on the difficulty experienced by Science to provide practical advice, in 'The Inquisitive Mind'."
-    url = "https://in-mind.org/blog/post/why-a-new-popular-press-psychology-book-refrains-from-giving-advice"
+#    [[params.work.row]]
+#    category = "publication.png"
+#    img = "practical.png"
+#    alt = "practical"
+#    title = "Translation of science to practical advice"
+#    subtitle = "02/2021 - Hans & Patrick published an article on the difficulty experienced by Science to provide practical advice, in 'The Inquisitive Mind'."
+#    url = "https://in-mind.org/blog/post/why-a-new-popular-press-psychology-book-refrains-from-giving-advice"
 
 #    [[params.work.row]]
 #    category = "announcements.png"
