--- a/config.toml
+++ b/config.toml
@@ -110,7 +110,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     img = "warm.png"
     alt = "IJzerman"
     title = "Heartwarming covered in a magazine"
-    subtitle = "11/2021 - Heartwarming was covered in Dutch science magazine Quest."
+    subtitle = "11/2021 - Heartwarming was covered in Dutch science magazine Quest blablabablablakzec,vef,zef,ve,,ev,ev,vr,v,ve,efv."
     url = "https://www.quest.nl/"
 
    [[params.work.row]]
