--- a/config.toml
+++ b/config.toml
@@ -108,7 +108,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
    [[params.work.row]]
     category = "announcements.png"
     img = "warm.png"
-    alt = "IJzerman"
+    alt = "Heartwarming"
     title = "Heartwarming covered in a magazine"
     subtitle = "11/2021 - Heartwarming was covered in Dutch science magazine Quest blablabablablakzec,vef,zef,ve,,ev,ev,vr,v,ve,efv."
     url = "https://www.quest.nl/"
