--- a/config.toml
+++ b/config.toml
@@ -110,7 +110,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     img = "warm.png"
     alt = "Heartwarming"
     title = "Heartwarming covered in a magazine"
-    subtitle = "11/2021 - IJzerman's book - Heartwarming - was covered in Dutch science magazine Quest."
+    subtitle = "11/2021 - IJzerman's book - Heartwarming - was covered in Dutch science magazine Quest.afzh hzfe blblblblblblbl"
     url = "https://www.quest.nl/"
 
    [[params.work.row]]
