--- a/config.toml
+++ b/config.toml
@@ -110,7 +110,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     img = "cuffing.png"
     alt = "cuffing season"
     title = "Science behind cuffing season"
-    subtitle = "12/2021 - Hans' work on social thermoregulation cited in Insider journal!"
+    subtitle = "12/2021 - Hans' work on social thermoregulation was cited in Insider journal!"
     url = "https://www.insider.com/science-behind-cuffing-season-why-we-crave-relationships-in-winter-2021-12"
 
    [[params.work.row]]
